2010-07-22	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/lookup/node.pm: Output of node lookup is aligned. Fixes
	#1006;
	http://www.packetfence.org/bugs/view.php?id=1006
	Also added vim modelines to force proper whitespace

2010-07-15	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/packetfence.spec, pf/NEWS: 1.9.0 released!
	
	* pf/docs/PacketFence_Administration_Guide.odt: Added network and
	components diagrams

2010-07-14	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt: Replaced feature
	intro text with updated one

2010-07-06	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt, 
	pf/docs/PacketFence_Developers_Guide.odt,
	pf/docs/PacketFence_Installation_Guide.odt: Version bump

	* pf/docs/PacketFence_Developers_Guide.odt: Fixed bad propagation from
	1_8 branch (copied document from 1_8 branch and re-did changes since
	then).

	* pf/docs/PacketFence_Administration_Guide.odt: Added doc for HP 
	ProCruve 3400cl (same as ProCurve 2600).

	* pf/README_SWITHCES, pf/html/admin/configuration/switches_add.php, 
	pf/html/admin/configuration/switches_edit.php: Renamed Procurve to
	ProCurve in the user visible locations since it's the official HP way.

	* pf/docs/PacketFence_Administration_Guide.odt: Fixed Procurve 2600
	SNMP configuration (Thanks to Andrew Niemantsverdriet for pointing it
	out!)

2010-07-05	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt: Added documentation to
	configure the Foundry FastIron 4802 in port-security with or without
	VoIP (IPT)

	* pf/docs/PacketFence_Administration_Guide.odt: Fixed small mistakes 

	* Renamed pf/lib/pf/SNMP/SMC/SMC8800M.pm to 
	pf/lib/pf/SNMP/SMC/TS8800M.pm, modified pf/lib/pf/SNMP/SMC/TS8800M.pm,
	pf/lib/pf/SNMP/SMC.pm, pf/t/critic.t, pf/t/data.t, 
	pf/t/hardware-snmp-objects.t, pf/t/pod.t,
	pf/html/admin/configuration/switches_add.php, 