@@ -1,4 +1,8 @@
 2010-07-22	Olivier Bilodeau <obilodeau@inverse.ca>
+	* pf/lib/pf/radius.pm: A sample of working RADIUS VoIP authorization
+	for Cisco switches in pf::radius' authorize_voip. Fixes #1008;
+	http://www.packetfence.org/bugs/view.php?id=1008
+
 	* pf/lib/pf/lookup/node.pm: Output of node lookup is aligned. Fixes
 	#1006;
 	http://www.packetfence.org/bugs/view.php?id=1006
